netpol/example1-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: base-network-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
